add new website from server na

--- a/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
+++ b/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1632,7 +1632,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1653,18 +1653,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/friend-request" title="Friend Request">
+          <a class="list-top-movie-link" href="/phim-moi/house-of-the-fairy-fox" title="House of the Fairy Fox">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/friend-request-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/house-of-the-fairy-fox-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Friend Request
+             House of the Fairy Fox
             </span>
             <span class="list-top-movie-item-en">
-             Friend Request
+             House of the Fairy Fox
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bo-gia-hoan-luong-2" title="Bố Già Hoàn Lương 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-gia-hoan-luong-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bố Già Hoàn Lương 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Analyze That
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1675,40 +1697,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quyen-luc-troi-day" title="Quyền Lực Trỗi Dậy">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quyen-luc-troi-day-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Quyền Lực Trỗi Dậy
-            </span>
-            <span class="list-top-movie-item-en">
-             Days of Power
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/da-loi-dai" title="Đả Lôi Đài">
+          <a class="list-top-movie-link" href="/phim-moi/nuoi-day-dion-phan-2" title="Nuôi dạy Dion (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/da-loi-dai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoi-day-dion-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đả Lôi Đài
+             Nuôi dạy Dion (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Tiger and Dragon Reloaded
+             Raising Dion (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,21 +1719,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-den" title="The Den">
+          <a class="list-top-movie-link" href="/phim-moi/my-name-is-lenny" title="My Name Is Lenny">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-den-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-name-is-lenny-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Den
+             My Name Is Lenny
             </span>
             <span class="list-top-movie-item-en">
-             The Den
+             My Name Is Lenny
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1741,18 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-knight-3-doc-lap" title="Thám Tử Knight 3 Độc Lập">
+          <a class="list-top-movie-link" href="/phim-moi/khong-la-cai-dinh-gi" title="Không Là Cái Đinh Gỉ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-knight-3-doc-lap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-la-cai-dinh-gi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Knight 3 Độc Lập
+             Không Là Cái Đinh Gỉ
             </span>
             <span class="list-top-movie-item-en">
-             Detective Knight: Independence
+             Big Nothing
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
