add new website from server na

--- a/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
+++ b/xem-phim-bo/hananoi-va-trieu-chung-tinh-yeu/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1653,62 +1653,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/house-of-the-fairy-fox" title="House of the Fairy Fox">
+          <a class="list-top-movie-link" href="/phim-moi/song-tron-dam-me-phan-2" title="Sống trọn đam mê (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/house-of-the-fairy-fox-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-tron-dam-me-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             House of the Fairy Fox
+             Sống trọn đam mê (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             House of the Fairy Fox
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-gia-hoan-luong-2" title="Bố Già Hoàn Lương 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-gia-hoan-luong-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bố Già Hoàn Lương 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Analyze That
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nuoi-day-dion-phan-2" title="Nuôi dạy Dion (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoi-day-dion-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nuôi dạy Dion (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Raising Dion (Season 2)
+             Go! Live Your (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,18 +1675,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/my-name-is-lenny" title="My Name Is Lenny">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-dong-vat-phan-3" title="Thám tử động vật (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-name-is-lenny-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-dong-vat-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             My Name Is Lenny
+             Thám tử động vật (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             My Name Is Lenny
+             The Creature Cases (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhin-thau" title="Nhìn Thấu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhin-thau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhìn Thấu
+            </span>
+            <span class="list-top-movie-item-en">
+             See
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1741,18 +1719,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-la-cai-dinh-gi" title="Không Là Cái Đinh Gỉ">
+          <a class="list-top-movie-link" href="/phim-moi/xam-nhap" title="Xâm nhập">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-la-cai-dinh-gi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xam-nhap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không Là Cái Đinh Gỉ
+             Xâm nhập
             </span>
             <span class="list-top-movie-item-en">
-             Big Nothing
+             Intrusion
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/shattered" title="Shattered">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shattered-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Shattered
+            </span>
+            <span class="list-top-movie-item-en">
+             Shattered
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
